[autofill] Show initial heuristic predictions.

Only applies when --show-autofill-type-predictions is given.

After parsing forms, the autofill manager defers sending the
predicted types for queryable forms to the render until the
query has completed. If the server predictions don't arrive,
the heuristic precictions are never sent to the renderer.

This CL sends the predictions for the queryable forms after
initial parse (the non-queryable predictions are already
sent). If and when the query completes, the predictions are
updated as per the current flow.

BUG=752225, 715828

Change-Id: Idebcda81317dcb9fcaa3c914983218e449970b65
Reviewed-on: https://chromium-review.googlesource.com/601003
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Commit-Queue: Roger McFarlane <rogerm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#491853}
Former-commit-id: 74251a06613acf413a5010eb1bbe0eab76bc32f8